# GameOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  cell.cpp  cell.hpp  gameoflife.cpp  gameoflife_viewer.cpp  logging.hpp  world.cpp  world.hpp
spdlog/: .gitignore
spdlog/fmt/: .gitignore
yaml-cpp/: .gitignore
yaml-cpp/contrib/: .gitignore
yaml-cpp/node/: .gitignore
yaml-cpp/node/detail/: .gitignore
